--- a/TMDL_2024_25_Assignment_1,_Qs_only.ipynb
+++ b/TMDL_2024_25_Assignment_1,_Qs_only.ipynb
@@ -64,7 +64,7 @@
         "id": "6cba9c4f"
       },
       "source": [
-        "*Add your answer here*"
+        "*add my image\n"
       ]
     },
     {
@@ -154,13 +154,13 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# np.random.seed(0)\n",
+        "np.random.seed(0)\n",
         "\n",
-        "def generate_sin(x, epsilon):\n",
-        "    # TODO: your code here\n",
-        "    return func\n",
+        "def generate_sin(x, epsilon = 0.1):\n",
+        "    eta = np.random.normal(0,epsilon,len(x))\n",
+        "    return np.sin(x) + eta\n",
         "\n",
-        "n_samples = ...\n",
+        "n_samples = np.linspace()\n",
         "\n",
         "# TODO: create noisy function\n",
         "x = ...\n",
