--- a/TMDL_2024_25_Assignment_2.ipynb
+++ b/TMDL_2024_25_Assignment_2.ipynb
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "15d29cea",
       "metadata": {
         "id": "15d29cea",
@@ -110,7 +110,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 537
         },
-        "outputId": "e718a295-ee91-405c-a480-2c5e1999f491"
+        "outputId": "43d02e5e-d924-4803-a1f6-3b4345dc4e66"
       },
       "outputs": [
         {
@@ -176,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "84dc3d46",
       "metadata": {
         "id": "84dc3d46",
@@ -184,7 +184,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 449
         },
-        "outputId": "882a8c6e-bd36-463c-871d-0e1bdd7a942a"
+        "outputId": "c747cd57-baac-49c3-cbde-32984300ac19"
       },
       "outputs": [
         {
@@ -279,14 +279,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "a79601de",
       "metadata": {
         "id": "a79601de",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7a842c63-aa20-4838-f69e-59de99317d26"
+        "outputId": "083f6ff7-1568-49bc-f679-51d85481e07d"
       },
       "outputs": [
         {
@@ -720,21 +720,22 @@
         "from sklearn.svm import SVC\n",
         "\n",
         "param_grid_svm = [\n",
-        "    {'kernel': [...],\n",
-        "     'C': [...],\n",
-        "     'degree': [...],\n",
-        "     'gamma': [...]}\n",
+        "    {'kernel': [\"linear\", \"poly\", \"rbf\"],\n",
+        "     'C': [0.1,1,10,100],\n",
+        "     'degree': [2,3,4],\n",
+        "     'gamma': [10**x for x in range(-2, 3)]}\n",
         "]\n",
         "\n",
         "# create the cross-validation object\n",
+        "\n",
         "optimal_params_svm = GridSearchCV(\n",
         "    estimator = SVC(),             # support vector classifier instance\n",
-        "    param_grid = ...,              # grid search params\n",
-        "    cv = ...,                      # k=5 CV\n",
+        "    param_grid = param_grid_svm,              # grid search params\n",
+        "    cv = 5,                      # k=5 CV\n",
         "    scoring='accuracy',            # use accuracy measure for best hyperparameters\n",
         ")\n",
         "\n",
-        "optimal_params_svm.fit(...)\n",
+        "optimal_params_svm.fit(train_X, train_y)\n",
         "\n",
         "print(\n",
         "    \"The best parameters are %s with a score of %0.2f\"\n",
@@ -761,7 +762,16 @@
         "id": "2d7f5cb8"
       },
       "source": [
-        "*Your answer here*"
+        "1. There are 4 linear models,\n",
+        "\n",
+        "3 x 4 x 5 = 60 poly models\n",
+        "\n",
+        "4 x 5 = 20 rbf models\n",
+        "\n",
+        "So in total: 4 + 60 + 20 = 84 models\n",
+        "\n",
+        "2. Using 5 fold we train\n",
+        "Each combination is trained 5 times so we train 84 * 5 = 420 times\n"
       ]
     },
     {
@@ -784,10 +794,10 @@
       },
       "outputs": [],
       "source": [
-        "modelSVC = SVC(...) # create model\n",
-        "modelSVC = ...      # train model\n",
-        "print(\"Training score:\", ...)\n",
-        "print(\"Testing score: \", ...)"
+        "modelSVC = SVC(kernel = , c = ) # create model\n",
+        "modelSVC = modelSVC.fit(train_X, train_y)     # train model\n",
+        "print(\"Training score:\", modelSVC.score(train_X, train_y)\n",
+        "print(\"Testing score: \",  modelSVC.score(test_X, test_y)"
       ]
     },
     {
@@ -823,9 +833,10 @@
       "source": [
         "from time import perf_counter # used to compute intervals\n",
         "\n",
-        "n_train, n_test = ..., ...\n",
-        "... = get_data_subset(...) # get data\n",
-        "... # flatten images\n",
+        "n_train, n_test = 5000, 1000\n",
+        "train_X, train_y, test_X, test_y= get_data_subset(n_train, n_test) # get data\n",
+        " # flatten images\n",
+        "train_X, test_X = flatten_cifar10(train_X), flatten_cifar10(test_X)\n",
         "\n",
         "# set up lists to store scores and times\n",
         "train_scores = []\n",
@@ -837,35 +848,39 @@
         "    \"\"\" Trains, times and evaluates a given instantiated model on data \"\"\"\n",
         "\n",
         "    start = perf_counter()               # check current (start) time\n",
-        "    model = model.fit(...)               # perform some code that you want to time\n",
+        "    model = model.fit(train_X, train_y)               # perform some code that you want to time\n",
         "    end = perf_counter()                 # check current (end) time\n",
         "    fit_time = end-start                 # compute interval\n",
         "\n",
         "    # time inference over train score\n",
         "    start = perf_counter()\n",
-        "    train_score = ...\n",
+        "    train_score = model.score(train_X, train_y)\n",
         "    end = perf_counter()\n",
         "    train_score_time = end-start\n",
         "\n",
         "    # time inference over test score\n",
         "    start = perf_counter()\n",
-        "    test_score = ...\n",
+        "    test_score = model.score(test_X, test_y)\n",
         "    end = perf_counter()\n",
         "    test_score_time = end-start\n",
         "\n",
         "    return train_score, test_score, fit_time, train_score_time, test_score_time\n",
         "\n",
         "# create models\n",
-        "modelLR = ...\n",
-        "modelDT = ...\n",
-        "modelRFC = ...\n",
-        "modelSVC = ...\n",
+        "modelLR = LogisticRegression()\n",
+        "modelDT = tree.DecisionTreeClassifier(max_depth=3)\n",
+        "modelRFC = RFC(n_estimators=70, max_depth=9)\n",
+        "modelSVC = SVC(kernel='rbf', C=10, gamma=0.1)\n",
         "\n",
         "for model in tqdm([modelLR, modelDT, modelRFC, modelSVC]):\n",
         "    train_score, test_score, fit_time, train_score_time, test_score_time = train_and_eval(model, train_X, train_y, test_X, test_y)\n",
+        "    train_scores.append(train_score)\n",
+        "    test_scores.append(test_score)\n",
+        "    fit_times.append(fit_time/n_train)\n",
+        "    inf_times.append(train_score_time/n_train)\n",
+        "    inf_times.append(test_score_time/n_test)\n",
         "    # add these values to the list set up above\n",
-        "    # don't forget that the training and inference times should be stored per image and not for the whole run\n",
-        "    ..."
+        "    # don't forget that the training and inference times should be stored per image and not for the whole run"
       ]
     },
     {
@@ -891,25 +906,27 @@
       },
       "outputs": [],
       "source": [
-        "model_names = [...]\n",
+        "model_names = [\"modelLR\",\"modelDT\", \"modelRFC\", \"modelSVC\"]\n",
         "bar_width = 0.35\n",
         "\n",
         "# Create an array for the x-axis positions\n",
-        "x = np.arange(...)\n",
+        "x = np.arange(len(model_names))\n",
         "\n",
         "# Plotting the bars\n",
         "fig, ax = plt.subplots()\n",
-        "bar1 = ax.bar(...) # training accuracy: don't forget to add labels\n",
-        "bar2 = ax.bar(...) # testing accuracy\n",
+        "bar1 = ax.bar(x - bar_width/2, train_scores, width=bar_width, label=\"Train Accuracy\") # training accuracy: don't forget to add labels\n",
+        "bar2 = ax.bar(ax.bar(x + bar_width/2, test_scores, width=bar_width, label=\"Test Accuracy\")) # testing accuracy\n",
         "\n",
         "# Add labels, title, and legend\n",
-        "ax.set_xlabel(...)\n",
-        "ax.set_ylabel(...)\n",
-        "ax.set_title(...)\n",
+        "ax.set_xlabel(\"Model\")\n",
+        "ax.set_ylabel(\"Accuracy\")\n",
+        "ax.set_title(\"Different ML model performances\")\n",
         "# set proper x ticks: I'll help you with this one\n",
         "ax.set_xticks(x + bar_width / 2)\n",
         "ax.set_xticklabels(model_names)\n",
-        "ax.legend()"
+        "ax.legend()\n",
+        "\n",
+        "plt.show()"
       ]
     },
     {
@@ -923,11 +940,18 @@
       "source": [
         "# Plotting the times\n",
         "fig, ax = plt.subplots()\n",
-        "bar1 = ax.bar(...) # fit times: don't forget labels\n",
-        "bar2 = ax.bar(...) # inference times\n",
+        "bar1 = ax.bar(x - bar_width/2, fit_times, width=bar_width, label='Training Time/Image')  # fit times: don't forget labels\n",
+        "bar2 = ax.bar(x + bar_width/2, test_inf_times, width=bar_width, label='Inference Time/Image') # inference times\n",
         "\n",
-        "# Add labels, title, and legend\n",
-        "# set proper x ticks"
+        "ax.set_xlabel(\"Model\")\n",
+        "ax.set_ylabel(\"Time (seconds)\")\n",
+        "ax.set_title(\"Different ML model times\")\n",
+        "\n",
+        "ax.set_xticks(x + bar_width / 2)\n",
+        "ax.set_xticklabels(model_names)\n",
+        "ax.legend()\n",
+        "\n",
+        "plt.show()"
       ]
     },
     {
@@ -951,7 +975,7 @@
         "id": "1f2f076e"
       },
       "source": [
-        "*Your answer here*"
+        "It doesn't finish running yet...."
       ]
     }
   ],
